# rubrify

./: .gitignore  PHILOSOPHY.md  README.md  justfile  pyproject.toml
rubrify/: __init__.py  _behaviors.py  _calibration_suites.py  _examples.py  _meta_rubric.py  _mutations.py  _properties.py  _types.py  calibration.py  client.py  generate.py  improve.py  input_render.py  model_policy.py  parse.py  provenance.py  repair.py  result.py  rubric.py  xml_io.py
tests/: test_algebra.py  test_behavior_helpers.py  test_calibration.py  test_calibration_mutations.py  test_client.py  test_constraint_runtime.py  test_evaluate.py  test_extras_passthrough.py  test_gaps.py  test_generate.py  test_generate_loop.py  test_improve.py  test_input_render.py  test_model_policy.py  test_mutations.py  test_parse.py  test_polish.py  test_properties.py  test_provenance.py  test_reference_faithfulness.py  test_refine_loop.py  test_repair.py  test_rubric.py  test_trace.py  test_types.py  test_xml_io.py
tests/fixtures/: anti_slop_rubric.xml  compliance_judge.xml  on_writing_well_v1.xml  on_writing_well_v2.xml  on_writing_well_v3.xml  slurs.xml
