[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rubrify"
version = "0.1.0"
description = "Programmatic API for LLM rubric definition, generation, evaluation, and evolution"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "markdown-it-py>=3.0"]
license = {text = "MIT"}

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
all = ["openai>=1.0", "anthropic>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
    "openai>=1.0",
    "anthropic>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["rubrify"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"rubrify/_examples.py" = ["E501"]
"rubrify/_calibration_suites.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
markers = ["integration: real LLM API calls (deselect with '-m not integration')"]
